# usage-tracker

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  index.html  pyproject.toml  station.json
.github/workflows/: tests.yml
config/: fleet.json
docs/assets/: usage-tracker-social-preview.jpg.prompt.txt
docs/assets/workflows/: usage-evidence.json
docs/plans/: 2026-07-17-fleet-snapshot-collector.md
docs/superpowers/plans/: 2026-04-28-usage-tracker-update.md
docs/superpowers/specs/: 2026-04-28-usage-tracker-update-design.md
hooks/: pre-push
scripts/: __init__.py  check_frontend.py  scan_repo.py
systemd/: usage-tracker-fleet.service  usage-tracker-fleet.timer
tests/: frontend.test.js  test_ci_checks.py  test_cli.py  test_collect_fleet_usage.py  test_export_usage.py
tests/fixtures/: sample-claude-project.jsonl  sample-codex-rollout.jsonl  sample-openclaw-session.jsonl
