[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "usage-tracker"
version = "0.1.0"
description = "Local AI session usage and spend exporter"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Escoffier Labs" }]
dependencies = []

[project.scripts]
usage-tracker = "export_usage:console_main"

[project.urls]
Homepage = "https://github.com/escoffier-labs/usage-tracker"
Repository = "https://github.com/escoffier-labs/usage-tracker"

[tool.setuptools]
py-modules = ["export_usage"]
package-dir = { "" = "bin" }
